# barrette

./: Cargo.toml  LICENSE  README.md  example-wob.toml
.github/: dependabot.yml
.github/workflows/: check.yml  release.yml
src/: config.rs  fifo.rs  main.rs  pid_lock.rs  process.rs
