[package]
name = "barrette"
version = "0.2.0"
authors = ["Luka Peschke <mail@lukapeschke.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
sysinfo = {version = "^0.30", default-features = false}
anyhow = "1.0.86"
libc = "0.2.155"
structopt = {version = "^0.3", default-features = false}
toml = "0.8.17"
serde = "1.0.185"
serde_derive = "1.0.147"
log = "0.4.22"
env_logger =  {version = "0.11.5", default-features = false}
shellexpand = "3.1.0"

[[bin]]
name = "brt"
path = "src/main.rs"
