[package]
name = "barrette"
version = "0.2.0"
authors = ["Luka Peschke <mail@lukapeschke.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
sysinfo = {version = "^0.34", default-features = false, features = ["system"]}
anyhow = "1.0.99"
libc = "0.2.176"
structopt = {version = "^0.3", default-features = false}
toml = "0.9.5"
serde = "1.0.185"
serde_derive = "1.0.147"
log = "0.4.28"
env_logger =  {version = "0.11.8", default-features = false}
shellexpand = "3.1.1"

[[bin]]
name = "brt"
path = "src/main.rs"
